# hoard_and_seek

./: API.md  CLAUDE.md  CMakeLists.txt  INTEGRATION_PROMPT.md  README.md
cmake/: mingw-w64-toolchain.cmake
include/: HoardAndSeekAPI.h
src/: GW2API.cpp  GW2API.h  IconManager.cpp  PermissionManager.cpp  dllmain.cpp
